--- a/public/styles.css
+++ b/public/styles.css
@@ -17,6 +17,7 @@ form{
     flex-direction: column;
     gap: 1rem;
     margin-top: 1rem;
+    align-items: center ;
 }
 
 input{
@@ -26,6 +27,21 @@ input{
 
 textarea {
     field-sizing: content;
+    min-width: 12rem;
     max-width: 15rem;
+    min-height: 10rem;
     padding: 0.5rem;
+    border: transparent;
+    border-radius: 0.3rem;
+}
+
+button{
+    background-color: rgb(59, 142, 59);
+    border: transparent;
+    padding: 0.4rem;
+    width: 7rem;
+    border-radius: 0.3rem;
+    font-weight: 700;
+    color: rgb(243, 226, 226);
+    cursor: pointer;
 }
